# cis2-connman-cli

./: .tool-versions  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
connman_cli/: app.py  main.py
connman_cli/commands/: auth.py  config.py  ping.py  profile.py
connman_cli/lib/: api_client.py  config.py  constants.py  log.py  token.py
